# jupyter-hover-tooltip

./: .gitignore  .pnp.cjs  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  install.json  jupyter_hover_tooltip.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json  webpack.config.js
jupyter_hover_tooltip/: __init__.py
jupyter_hover_tooltip/labextension/: build_log.json  package.json
jupyter_hover_tooltip/labextension/static/: lib_index_js.02da860f50f2e5c6840e.js  lib_index_js.02da860f50f2e5c6840e.js.map  remoteEntry.cb4c723a62fb0b83cbfe.js  remoteEntry.cb4c723a62fb0b83cbfe.js.map  style.js  style_index_css.3035ced63ee551f4929d.js  style_index_css.3035ced63ee551f4929d.js.map
jupyter_hover_tooltip/static/: index.js
schema/: plugin.json
src/: index.js
src/jupyter_hover_tooltip/: __init__.py
src/jupyter_hover_tooltip/static/: index.js  styles.css  tooltip.js
style/: index.css
test_files/: test.py
tests/: test_extension.py
